# Basalt

./: .gitignore  Cargo.toml  Install.ps1  Install.sh  README.md  UninstallFlatpak.sh  build.rs  clippy.toml
.github/workflows/: ci.yml  release-latest.yml  release-linux-deb.yml  release-macos-dmg.yml  release-windows-installer.yml
DevUtils/: BackupRepo.sh  Build.ps1  Build.sh  BuildDeb.sh  BuildFlatpak.sh  ExportBuildToGithub.ps1  ExportBuildToGithub.sh  Install.sh  RunReleaseWorkflows.ps1  RunReleaseWorkflows.sh  Setup.ps1  Setup.sh
DevUtils/BuildScripts/: build-linux-amd64.sh  build-macos-arm64.sh  build-windows-amd64.ps1
Resources/Flatpak/: io.matt.Basalt.yml
packaging/linux/: basalt.desktop
resources/: blacklist.txt
src/: cli.rs  core.rs  gui.rs  main.rs
src/cli/: mod.rs  router.rs  usage.rs
src/cli/commands/: add.rs  add_to_playlist.rs  backup_mattmc.rs  core_status.rs  discover.rs  install_core.rs  install_emulators.rs  install_mattmc.rs  launch.rs  list.rs  mod.rs  (+12 more)
src/core/: artwork.rs  artwork_cache.rs  discovery_service.rs  emulation.rs  emulation_target.rs  emulator_systems.rs  error.rs  game_service.rs  mattmc_install.rs  mod.rs  playlist_service.rs  registry.rs  script_service.rs  settings.rs  types.rs  update_service.rs
src/gui/: app.rs  app_actions.rs  app_startup.rs  app_state.rs  artwork.rs  background_jobs.rs  game_tile.rs  install_screen.rs  library_screen.rs  mod.rs  search.rs  settings_screen.rs  tile_grid.rs  tile_math.rs  top_bar.rs  update_actions.rs
src/platform/: fallback.rs  linux_x86_64.rs  mod.rs  windows_x86_64.rs
(+24 files in other folders)
