[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
resvg = "0.45"
crossbeam-channel = "0.5"
ureq = "2"
gilrs = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
ico = "0.4"
resvg = "0.45"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
